🐝 a full _working_ draft

--- a/2020_Dec_TUKS/mizzou.css
+++ b/2020_Dec_TUKS/mizzou.css
@@ -1,5 +1,5 @@
 .remark-slide .title-slide {
-  background-image: url(img/UdeM_logo.png);
+  background-image: url(img/UdeM_logo.png), url(img/QCBS_logo_mintext.png);
   background-position: 1% 99%, 99% 99%;
   background-size: auto 100px, auto 100px;
 }
