--- a/2020_Dec_QCBS/xaringan-themer.css
+++ b/2020_Dec_QCBS/xaringan-themer.css
@@ -21,15 +21,16 @@
 @import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Cabin:600,600i&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700&display=swap);
+@import url('https://fonts.googleapis.com/css2?family=Fira+Mono&family=Roboto+Mono:wght@200;500&family=Roboto:wght@400;500&family=Source+Code+Pro:wght@200&display=swap');
 
 
 :root {
   /* Fonts */
-  --text-font-family: 'Noto Sans';
+  --text-font-family: 'Source Code Pro', monospace;
   --text-font-is-google: 1;
   --text-font-family-fallback: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, Ubuntu, roboto, noto, segoe ui, arial;
   --text-font-base: sans-serif;
-  --header-font-family: Cabin;
+  --header-font-family: 'Roboto Mono', monospace;
   --header-font-is-google: 1;
   --code-font-family: 'Source Code Pro';
   --code-font-is-google: 1;
@@ -37,7 +38,7 @@
   --text-font-size: 1rem;
   --code-font-size: 0.9rem;
   --code-inline-font-size: 1em;
-  --header-h1-font-size: 2.75rem;
+  --header-h1-font-size: 2.3rem;
   --header-h2-font-size: 2.25rem;
   --header-h3-font-size: 1.75rem;
 
@@ -51,8 +52,8 @@
   --inverse-text-color: #000000;
   --inverse-background-color: #FF961C;
   --inverse-header-color: #FFFFFF;
-  --title-slide-background-color: #dec88d;
-  --title-slide-text-color: #534668;
+  --title-slide-background-color: #8C534C;
+  --title-slide-text-color: #dec88d;
   --header-background-color: #1381B0;
   --header-background-text-color: #FFFFFF;
   --primary: #1381B0;
