added feedback edits

--- a/2020_Dec_QCBS/xaringan-themer.css
+++ b/2020_Dec_QCBS/xaringan-themer.css
@@ -52,7 +52,7 @@
   --inverse-text-color: #000000;
   --inverse-background-color: #FF961C;
   --inverse-header-color: #FFFFFF;
-  --title-slide-background-color: #8C534C;
+  --title-slide-background-color: #534668;
   --title-slide-text-color: #dec88d;
   --header-background-color: #1381B0;
   --header-background-text-color: #FFFFFF;
